Fix overflow in lf.css

--- a/lexicon-server/src/css/lf.css
+++ b/lexicon-server/src/css/lf.css
@@ -150,11 +150,11 @@ div#account{
 	font-size: 0.85em; 
 	line-height: 24px;
 }
+
 div.sfcontainer {
 	position: relative;
 	width: 960px;
 	height: auto;
-	overflow: auto;
 	margin: 0 auto;
 }
 /* Bootstrap
@@ -186,7 +186,6 @@ div.darkTextLogo {
 
 div#promotion {
 	position: relative;
-	overflow: hidden;
 	width: 958px;
 	height: 400px;
 	margin-top: 12px;
